syntax = "proto3";

package comandalivre.v1;

option java_multiple_files = true;
option java_package = "io.github.pedroermarinho.shared.grpc.messages.v1";

message CreateUserRequest {
  string sub = 1;
  string email = 2;
  string name = 3;
  optional string picture = 4;
}

message UserResponse {
  string id = 1;
  string name = 2;
  string email = 3;
  repeated string feature_keys = 4;
}



