syntax = "proto3";

package comandalivre.v1;

import "messages/user_messages.proto";

option java_multiple_files = true;
option java_package = "io.github.pedroermarinho.shared.grpc.user.v1";
option java_outer_classname = "UserProto";

service UserService {
  rpc CreateUser (CreateUserRequest) returns (UserResponse);
}

